ProFit/objects/Attendee__c.object
<CustomObject>
    <description>Attendee Object for Profit App</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name</description>
        <inlineHelpText>Company Name</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Adress</description>
        <inlineHelpText>Email Adress</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Location</label>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number</description>
        <inlineHelpText>Contact Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>